fix: dark mode support on search button

--- a/src/style/theme/fkui.scss
+++ b/src/style/theme/fkui.scss
@@ -56,6 +56,7 @@
     --docs-search-border-color: var(--fkds-color-border-primary);
     --docs-search-background-color: var(--fkds-color-background-primary);
     --docs-search-text-color: var(--fkds-color-text-primary);
+    --docs-search-button-color-hover: var(--fkds-color-background-secondary);
 
     // outline
     --docs-outline-hover-background-color: var(--fkds-color-background-tertiary);
